[metadata]
name = DMPG
version = 0.4
author = Ralf Buschermöhle
author_email = r.buschermoehle@hs-osnabrueck.de
description = Simulation PlayGround
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = discrete, event, simulation
license = MIT
classifiers =
    Framework :: SimPy, SciPy, DistFit
    Programming Language :: Python :: 3
[flake8]
exclude = .git,__pycache__,venv,build
ignore = E501, W503, W504
[pylint]
disable = C0301                             # disable C0114,C0115,C0116 to ignore docstring related errors
ignore = .git,__pycache__,venv,build
ignore-paths = src/models/, tests/, src_extra/
score = no